# clap

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  README.md.old  README.rst  lab.py  mkdocs.yml  pyproject.toml  setup.py
clap/: __init__.py  abc.py  annotations.py  arguments.py  commands.py  converter.py  core.py  errors.py  groups.py  help.py  lexer.py  metadata.py  option.py  options.py  param_types.py  parameters.py  parser.py  positional.py  utils.py
docs/: index.md
docs/reference/: abc.md  application.md  argument.md  attributes.md  command.md  converter.md  core.md  decorators.md  docstring.md  errors.md  extension.md  group.md  help.md  lexer.md  option.md  parser.md  positional.md  script.md  subcommand.md  token.md  util.md
examples/: basic.py  extension.py  fizz_buzz.py  fizzbuzz.py  git.py  minimal.py  to_do.py  todo.py
examples/custom_help/: main.py
examples/extension/: main.py
examples/extension/commands/: remote.py  submodule.py
examples/fuji/: README.md
src/clap/: __init__.py  abc.py  application.py  argument.py  attributes.py  command.py  converter.py  core.py  decorators.py  docstring.py  errors.py  extension.py  group.py  help.py  lexer.py  option.py  parser.py  positional.py  script.py  sentinel.py  subcommand.py  token.py  util.py
test/: test_lexer.py
tests/: fizzbuzz.py  test_arguments.py  test_command_decorator.py  test_commands_script.py  test_converter.py  test_docstring.py  test_lexer.py  test_parser.py  test_protocols.py  test_script_class.py
tests/fuji/fuji/: __main__.py  commands.py
