[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clap"
version = "0.2.1"
requires-python = ">=3.13"
dependencies = ["colorize", "mkdocstrings[python]>=0.18"]

[tool.setuptools.package-data]
"clap" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.uv.sources]
colorize = { git = "https://github.com/nicdgonzalez/colorize.git" }
